2008-01-02  Johan Dahlin  <johan@gnome.org>

	* tests/defaultvaluetest.c (test_type): Ignore a few more tests to 
	make it pass on Ubuntu.
	(main): Use gtk_test_list_all_types () instead of providing our
	own list.
	And it no longer passes.

2007-12-30  Johannes Schmid <jhs@gnome.org>

	* gtk/gtknotebook.c: (gtk_notebook_stop_reorder):
	Also reorder menu when reordering tabs by drag & drop
	(Bug #506474)
	
	* tests/testnotebookdnd.c: (create_notebook_with_notebooks):
	Add a menu to one of the notebooks to have a test-case for
	the change mentioned above.

2007-12-31  Philip Van Hoof  <pvanhoof@gnome.org>

        * gtk/gtktreemodel.c: Using GSlice for GtkTreePath

2007-12-31  Christian Persch  <chpe@gnome.org>

	* gtk/gtkprintunixdialog.c: (gtk_print_unix_dialog_get_property):
	Plug a mem leak. Bug #506107.

2007-12-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkiconfactory.c (render_fallback_image): Adjust to
	icon cache api change.  (#506135, Kazuki Iwamoto)

2007-12-28  Mathias Hasselmann  <mathias@openismus.com>

	Remove max_detail_height field from GtkCalendarPrivate. (#339540)

	* gtk/gtkcalendar.c: Drop max_detail_height field, and use
	a local variable instead in gtk_calendar_size_request.

2007-12-28  Matthias Clasen  <mclasen@redhat.com>

	* tests/defaultvaluetest.c: Add enough exclusions to make the
	test succeed.

2007-12-28  Christian Persch  <chpe@gnome.org>

	* modules/other/gail/Makefile.am:
	* modules/other/gail/tests/*:
	* configure.in: Merge tests from standalone gail. Bug #504568.

2007-12-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkclipboard.c: Make the finalizer work when display is
	not set.

2007-12-28  Mathias Hasselmann  <mathias@openismus.com>

	Draw bottom shadow of GtkCalender headings. (#506113)

	* gtk/gtkcalendar.c: Set proper initial height for priv->header_win.

2007-12-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcalendar.c: Document the initial values of year/month/day
	properties.
