@@ -1,3 +1,7 @@
+2008-01-03  Johan Dahlin  <johan@gnome.org>
+
+	* tests/defaultvaluetest.c: Make it pass again.
+
 2008-01-02  Johan Dahlin  <johan@gnome.org>
 
 	* tests/defaultvaluetest.c (test_type): Ignore a few more tests to 
